# FEUP-SDLE-DistributedPubSub

./: README.md
src/: .gitignore  Cargo.toml
src/client/: Cargo.toml  client.rs
src/clients/127.0.0.1/: state.json
src/proxy/: Cargo.toml  proxy.rs
src/rpubsub/: Cargo.toml  rpubsub.rs
src/server/: Cargo.toml  server.rs  topic.rs
