[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
zmq = "0.9"
rand = "0.8"
rpubsub = { path = "../rpubsub" }
serde = {version = "1.0.145", features = ["derive"]}
serde_json = {version = "1.0"}

[[bin]]
name = "server"
path = "./server.rs"

[lib]
name = "topic"
path = "./topic.rs"
